# fantasy-basketball-draft-helper

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: bref_per_game_2021.csv  bref_per_game_2022.csv  bref_per_game_2023.csv  bref_per_game_2024.csv  bref_per_game_2025.csv
data/fallback/: adp.csv  last_season.csv  projections.csv
src/: big_board.py  config.py  data_ingest.py  live_draft.py  roster_fit.py
src/analytics/: adp_utils.py  espn_points.py  pos_scarcity.py  replacement.py  risk.py  schedule_adj.py
src/ingestion/: web.py
src/models/: __init__.py  gbm.py  ridge.py
src/orchestration/: __init__.py  big_board.py  tiers.py
src/transform/: normalize.py  projections.py
src/ui_cli/: ui.py
src/utils/: core.py  logging.py
tests/: test_scoring_and_vorp.py
